<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/sideAText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sideA"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/sideA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/sideBText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sideB"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/sideB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/sideCText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sideC"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/sideC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/heightRoomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_of_room"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/heightRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
</LinearLayout>